[tool.poetry]
name = "uncertainty-propagation"
version = "0.0.0"
description = "M Tools to propagate parameter uncertainty through deterministic black-box functions"
authors = ["Can Bogoclu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.1"
experiment-design = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pre-commit = "^3.7.1"
pre-commit-hooks = "^4.6.0"
black = {extras = ["d"], version = "^24.2.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
