[tool.poetry]
name = "uncertainty-propagation"
version = "0.0.0"
description = "Tools to propagate parameter uncertainty through deterministic black-box functions"
authors = ["Can Bogoclu"]
license = "MIT"
readme = "README.md"
packages = [{include = "uncertainty_propagation"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
joblib = "^1.4.2"
experiment-design = "^0.0.8"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pre-commit = "^3.7.1"
pre-commit-hooks = "^4.6.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
